# extension-mass-delete

./: CMakeLists.txt  README.md
build-mass_delete-Desktop-Debug/: Makefile  ui_nuke.h
src/: mass_delete.cpp  mass_delete.hpp  mass_delete.pro  nuke.cpp  nuke.hpp  nuke.ui
