# This is a build file for Huggle (used with cmake)
# You will need to update it by hand!
cmake_minimum_required (VERSION 2.8.7)
PROJECT(huggle_nuke)
#  cmake <folder> -DQT5_BUILD=true
option(QT5_BUILD "Build huggle using the Qt5 framework" FALSE)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTXML TRUE)
SET(QT_USE_QTWEBKIT TRUE)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
include_directories(../../)
#### Qt 4 and 5 ####
if(QT5_BUILD)
    find_package(Qt5Core REQUIRED)
    find_package(Qt5Gui REQUIRED)
    find_package(Qt5Xml REQUIRED)
    find_package(Qt5Widgets REQUIRED)
    find_package(Qt5Network REQUIRED)
    if (NOT WEB_ENGINE)
        find_package(Qt5WebKit REQUIRED)
        set(QT_INCLUDES ${Qt5Gui_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Network_INCLUDE_DIRS} ${Qt5WebKit_INCLUDE_DIRS} ${Qt5Xml_INCLUDE_DIRS} ${Qt5Svg_INCLUDE_DIRS})
        include_directories(${QT_INCLUDES})
    else()
        find_package(Qt5WebEngine REQUIRED)
        set(QT_INCLUDES ${Qt5Gui_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Network_INCLUDE_DIRS} ${Qt5WebEngine_INCLUDE_DIRS} ${Qt5Xml_INCLUDE_DIRS} ${Qt5Svg_INCLUDE_DIRS})
        include_directories(${QT_INCLUDES})
    endif()
    include_directories(${QT_INCLUDES})
else()
    find_package(Qt4 REQUIRED)
endif()

file(GLOB huggle_nuke_srcx
    "src/*.cpp"
)
file (GLOB huggle_nuke_uixx
    "src/*.ui"
)

SET(huggle_nuke_SOURCES ${huggle_nuke_srcx})
SET(huggle_nuke_FORMS ${huggle_nuke_uixx})

if(QT5_BUILD)
    QT5_WRAP_CPP(huggle_nuke_HEADERS_MOC ${huggle_nuke_HEADERS})
    QT5_WRAP_UI(huggle_nuke_FORMS_HEADERS ${huggle_nuke_FORMS})
else()
    QT4_WRAP_CPP(huggle_nuke_HEADERS_MOC ${huggle_nuke_HEADERS})
    QT4_WRAP_UI(huggle_nuke_FORMS_HEADERS ${huggle_nuke_FORMS})
endif()
if (NOT QT5_BUILD)
  INCLUDE(${QT_USE_FILE})
endif()
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS( -DQT_USE_QSTRINGBUILDER )
ADD_LIBRARY(huggle_nuke SHARED ${huggle_nuke_SOURCES} ${huggle_nuke_HEADERS_MOC} ${huggle_nuke_FORMS_HEADERS})
TARGET_LINK_LIBRARIES(huggle_nuke ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(huggle_nuke huggle_core huggle_ui)
if (QT5_BUILD)
    if (NOT WEB_ENGINE)
        qt5_use_modules(huggle_nuke Core Gui Widgets WebKitWidgets Xml)
    else()
        qt5_use_modules(huggle_nuke Core Gui Widgets WebEngineWidgets WebEngine Xml)
    endif()
endif()
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
if (LINUX_SNAP)
    INSTALL(TARGETS huggle_nuke DESTINATION bin/extensions)
else()
    INSTALL(TARGETS huggle_nuke DESTINATION share/huggle/extensions)
endif()
